k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gurukulamhub
  labels:
    name: gurukulamhub
